# djangorestframework-api-key

./: .bumpversion.cfg  .coveragerc_dj22  .gitignore  .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  index.html  makemigrations.py  mkdocs.yml  mypy.ini  pyproject.toml  requirements-ci.txt  requirements.txt  runtests.py  setup.cfg  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  discussion.md
ci/: azure-pipelines.yml
ci/templates/: install.yml
docs/: guide.md  index.md  security.md
docs/upgrade/: 1.0.md  1.4.md  2.0.md  3.0.md
example_project/: README.md  manage.py  requirements.txt
example_project/animals/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
example_project/animals/migrations/: 0001_initial.py
example_project/example/: settings.py  urls.py
example_project/pets/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
example_project/pets/migrations/: 0001_initial.py
guide/: index.html
rest_framework_api_key/: __init__.py  _decorators.py  _helpers.py  admin.py  apps.py  checks.py  crypto.py  helpers.py  models.py  permissions.py  scopes.py  settings.py  utils.py  validators.py
rest_framework_api_key/management/: __init__.py
rest_framework_api_key/migrations/: 0001_initial.py  0002_apikey_expiry_date.py  0002_auto_20180922_1759.py  0002_auto_20190529_2243.py  0003_apikey_has_expired.py  0003_auto_20180924_1006.py  0003_auto_20190425_0857.py  0003_auto_20190609_1321.py  0003_auto_20190623_1952.py  0004_auto_20180924_1303.py  0004_auto_20190425_1144.py  0004_prefix_hashed_key.py  0005_auto_20190621_0933.py  0005_auto_id.py  0005_scopes.py
scripts/: build  bump  bumpversion.sh  changelog_bump.py  check  clean  docs  env  install  lint  makemigrations  makemigrations.py  publish  serve  test
search/: search_index.json
security/: index.html
src/rest_framework_api_key/: __init__.py  admin.py  apps.py  compat.py  crypto.py  mixins.py  models.py  permissions.py  signals.py  types.py
src/rest_framework_api_key/migrations/: 0001_initial.py  0002_auto_20190529_2243.py  0003_auto_20190623_1952.py  0004_prefix_hashed_key.py  0005_alter_apikey_hashed_key.py  (+1 more)
test_project/: README.md  manage.py
test_project/heroes/: admin.py  apps.py  models.py
test_project/project/: settings.py  urls.py  views.py
tests/: compat.py  conftest.py  dateutils.py  factory.py  mixins.py  test_admin.py  test_api_key_admin.py  test_api_key_model.py  test_caching.py  test_checks.py  test_compatibility.py  test_has_api_key.py  test_has_api_key_or_is_authenticated.py  test_hashers.py  test_legacy_key_generator.py  test_migrations.py  test_model.py  test_permissions.py  test_permissions_combination.py  test_permissions_custom.py  test_permissions_legacy.py  test_plain_key_hashing.py  test_scopes.py  test_test_project.py  test_validators.py  urls.py  utils.py  views.py
tests/heroes/: admin.py  apps.py  models.py  permissions.py
tests/legacy/: crypto.py  permissions.py
tests/project/: README.md  manage.py
tests/test_scopes/: conftest.py  test_permissions_scopes.py  test_scopes.py
tools/: install_django.sh  makemigrations.py
upgrade/1.0/: index.html
upgrade/1.4/: index.html
upgrade/2.0/: index.html
(+19 files in other folders)
