[tool.poetry]
name = "djangorestframework-api-key"
version = "1.4.1"
description = "API key permissions for the Django REST Framework"
authors = [
  "florimondmanca <florimond.manca@gmail.com>"
]
readme = "README.md"
repository = "https://github.com/florimondmanca/djangorestframework-api-key"
homepage = "https://florimondmanca.github.io/djangorestframework-api-key/"
documentation = "https://florimondmanca.github.io/djangorestframework-api-key/"
packages = [
  { include = "rest_framework_api_key" }
]
include = ["rest_framework_api_key/py.typed"]
license = "MIT"
classifiers=[
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Environment :: Web Environment",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: Django",
  "Framework :: Django :: 2.0",
  "Framework :: Django :: 2.1",
  "Framework :: Django :: 2.2"
]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
django = {version = "^2.2", extras = ["argon2", "bcrypt"]}
djangorestframework = "^3.10"
pytest = "^5.1"
pytest-django = "^3.5"
mkdocs = "^1.0"
mkdocs-material = "^4.4"
pymdown-extensions = "^6.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true, python = "^3.6"}
pylint = "^2.3"
mypy = "^0.720.0"
bumpversion = "^0.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
